Update style.css file
Update style.css file

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 @font-face{
 	font-family: "fajala";
-	src: url(../fonts/font.ttf) format("truetype");
+	src: url(../fonts/fajala.ttf) format("truetype");
 	font-weight: normal;
 	font-style: normal;
 }
