--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -90,7 +90,7 @@ body{
 	min-height: 560px;
 	margin: 0px auto;
 	margin-top: 30px;
-	margin-bottom: 50px;
+	margin-bottom: 110px;
 }
 
 #sidebar{
@@ -219,4 +219,20 @@ input[type="button"], input[type="submit"]{
 	box-shadow: 0px 1px 3px #ccc;
 	margin-bottom: 10px;
 	border-radius: 5px;
+}
+
+#signedin-user{
+	margin-bottom: 15px;
+	background: #31d818;
+	color: white;
+	text-align: center;
+	padding-top: 20px;
+}
+
+#signedin-error{
+	margin-bottom: 15px;
+	background: crimson;
+	color: white;
+	text-align: center;
+	padding-top: 20px;
 }
