--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -223,10 +223,58 @@ input[type="button"], input[type="submit"]{
 
 #signedin-user{
 	margin-bottom: 15px;
-	background: #31d818;
+	background: #2979CD;
 	color: white;
 	text-align: center;
 	padding-top: 20px;
+	padding-bottom: 20px;
+}
+
+#signedin-user a{
+	display: block;
+	margin: auto;
+	margin-top: 10px;
+	margin-bottom: 10px;
+	background: #52e0df;
+	color: white;
+	text-decoration: none;
+	padding: 5px;
+	border-radius: 5px;
+	box-shadow: 0px 1px 3px #808080;
+	width: 130px;
+
+}
+
+#add-entry:hover{
+	background: #9af53d;
+	color: white;
+	text-decoration: none;
+	padding: 5px;
+	border-radius: 5px;
+}
+
+#add-category:hover{
+	background: #dec93d;
+	color: white;
+	text-decoration: none;
+	padding: 5px;
+	border-radius: 5px;
+}
+
+#edit-profile:hover{
+	background: #eb8447;
+	color: white;
+	text-decoration: none;
+	padding: 5px;
+	border-radius: 5px;
+}
+
+#sign-out:hover{
+	background: #e05252;
+	color: white;
+	text-decoration: none;
+	padding: 5px;
+	border-radius: 5px;
 }
 
 #signedin-error{
